--- a/blogpost.html
+++ b/blogpost.html
@@ -1,58 +1,113 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Himaayah Blog | The Journey of Seeking Knowledge</title>
+
   <script src="https://cdn.tailwindcss.com"></script>
-  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+
+  <style>
+    html { scroll-behavior: smooth; }
+  </style>
 </head>
-<body class="bg-white text-gray-800">
+
+<body class="bg-white text-gray-800 overflow-x-hidden">
 
   <!-- HEADER -->
-  <header class="bg-[#094570] text-white py-4 shadow-md fixed top-0 left-0 w-full z-50">
-    <div class="max-w-7xl mx-auto px-6 flex justify-between items-center">
-      <a href="index.html" class="text-2xl font-bold">Himaayah Institute</a>
-      <nav class="space-x-6">
-        <a href="index.html" class="hover:text-[#85CCFF]">Home</a>
-        <a href="about.html" class="hover:text-[#85CCFF]">About</a>
-        <a href="curriculum.html" class="hover:text-[#85CCFF]">Curriculum</a>
-        <a href="payment-portal.html" class="hover:text-[#85CCFF]">Register</a>
-        <a href="blogpost.html" class="hover:text-[#85CCFF] underline font-semibold">Blog</a>
-        <a href="contact.html" class="hover:text-[#85CCFF]">Contact</a>
-      </nav>
+  <header class="bg-[#094570] text-white shadow-md fixed inset-x-0 top-0 z-50">
+    <div class="mx-auto max-w-7xl px-4 sm:px-6">
+      <div class="flex h-16 items-center justify-between">
+
+        <!-- Brand -->
+        <a href="index.html" class="flex items-center gap-3 min-w-0">
+          <!-- Optional logo. Remove if not needed -->
+          <!-- <img src="logo.png" alt="Himaayah Logo" class="h-10 w-10 shrink-0 object-contain" /> -->
+          <div class="min-w-0">
+            <div class="font-bold truncate text-lg sm:text-xl">Himaayah Institute</div>
+            <div class="hidden sm:block text-xs text-white/70">Arabic. Qur’an. Islamic Sciences.</div>
+          </div>
+        </a>
+
+        <!-- Desktop nav -->
+        <nav class="hidden md:flex items-center gap-6 text-sm font-medium">
+          <a href="index.html" class="hover:text-[#85CCFF]">Home</a>
+          <a href="about.html" class="hover:text-[#85CCFF]">About</a>
+          <a href="curriculum.html" class="hover:text-[#85CCFF]">Curriculum</a>
+          <a href="payment-portal.html" class="hover:text-[#85CCFF]">Register</a>
+          <a href="blogpost.html" class="text-[#85CCFF] underline font-semibold">Blog</a>
+          <a href="contact.html" class="hover:text-[#85CCFF]">Contact</a>
+        </nav>
+
+        <!-- Mobile menu button -->
+        <button
+          id="menuBtn"
+          class="md:hidden inline-flex items-center justify-center rounded-xl border border-white/20 px-3 py-2 text-sm hover:bg-white/10"
+          aria-expanded="false"
+          aria-controls="mobileMenu"
+        >
+          Menu
+        </button>
+      </div>
+
+      <!-- Mobile menu -->
+      <div id="mobileMenu" class="md:hidden hidden pb-4">
+        <nav class="grid gap-2 rounded-2xl border border-white/10 bg-white/5 p-3 text-sm">
+          <a href="index.html" class="rounded-xl px-3 py-2 hover:bg-white/10">Home</a>
+          <a href="about.html" class="rounded-xl px-3 py-2 hover:bg-white/10">About</a>
+          <a href="curriculum.html" class="rounded-xl px-3 py-2 hover:bg-white/10">Curriculum</a>
+          <a href="payment-portal.html" class="rounded-xl px-3 py-2 hover:bg-white/10">Register</a>
+          <a href="blogpost.html" class="rounded-xl px-3 py-2 bg-white/10 text-[#85CCFF] font-semibold">Blog</a>
+          <a href="contact.html" class="rounded-xl px-3 py-2 hover:bg-white/10">Contact</a>
+        </nav>
+      </div>
     </div>
   </header>
 
   <!-- HERO SECTION -->
-  <section class="pt-28 pb-12 bg-[#85CCFF]/10 text-center" data-aos="fade-down">
-    <div class="max-w-4xl mx-auto px-6">
-      <h1 class="text-4xl font-bold text-[#094570] mb-4">The Journey of Seeking Knowledge</h1>
-      <p class="text-gray-600 text-sm">Published on <strong>November 2025</strong> | by <span class="font-semibold">Himaayah Editorial Team</span></p>
+  <section class="pt-24 sm:pt-28 pb-10 sm:pb-12 bg-[#85CCFF]/10 text-center" data-aos="fade-down">
+    <div class="mx-auto max-w-4xl px-4 sm:px-6">
+      <h1 class="text-2xl sm:text-4xl font-bold text-[#094570] mb-3 sm:mb-4 leading-tight">
+        The Journey of Seeking Knowledge
+      </h1>
+      <p class="text-gray-600 text-xs sm:text-sm">
+        Published on <strong>November 2025</strong> | by <span class="font-semibold">Himaayah Editorial Team</span>
+      </p>
     </div>
   </section>
 
   <!-- BLOG CONTENT -->
-  <main class="max-w-4xl mx-auto px-6 py-12 leading-relaxed text-lg" data-aos="fade-up">
-    <img src="images/blog1.jpg" alt="Seeking Knowledge" class="rounded-2xl w-full mb-8 shadow-lg">
-    
+  <main class="mx-auto max-w-4xl px-4 sm:px-6 py-10 sm:py-12 leading-relaxed text-base sm:text-lg" data-aos="fade-up">
+    <img
+      src="images/blog1.jpg"
+      alt="Seeking Knowledge"
+      class="rounded-2xl w-full mb-8 shadow-lg object-cover"
+    />
+
     <p class="mb-6">
       Knowledge (‘Ilm) is the light by which hearts are illuminated and paths are straightened. The Messenger of Allah ﷺ said:
     </p>
 
     <blockquote class="border-l-4 border-[#094570] pl-4 italic text-gray-700 mb-6">
-      “Whoever takes a path upon which to obtain knowledge, Allah makes the path to Paradise easy for him.”  
-      <br>— Narrated by Muslim
+      “Whoever takes a path upon which to obtain knowledge, Allah makes the path to Paradise easy for him.”
+      <br />— Narrated by Muslim
     </blockquote>
 
     <p class="mb-6">
-      Every sincere student of knowledge begins with an intention: <em>to seek what is with Allah</em>, not worldly recognition or praise. This sincerity transforms the act of learning into an act of worship. 
+      Every sincere student of knowledge begins with an intention: <em>to seek what is with Allah</em>, not worldly recognition or praise.
+      This sincerity transforms the act of learning into an act of worship.
     </p>
 
-    <h2 class="text-2xl font-bold text-[#094570] mt-10 mb-4">Balancing Effort with Tawakkul</h2>
+    <h2 class="text-xl sm:text-2xl font-bold text-[#094570] mt-10 mb-4">
+      Balancing Effort with Tawakkul
+    </h2>
+
     <p class="mb-6">
-      While striving to study and memorize, the student must remain humble, constantly relying upon Allah for understanding and success. Imam al-Shafi’i once said:
+      While striving to study and memorize, the student must remain humble, constantly relying upon Allah for understanding and success.
+      Imam al-Shafi’i once said:
     </p>
+
     <blockquote class="border-l-4 border-[#094570] pl-4 italic text-gray-700 mb-6">
       “Knowledge is a light, and the light of Allah is not given to the disobedient.”
     </blockquote>
@@ -61,12 +116,15 @@
       The best students are those who not only study hard but also purify their hearts. They seek knowledge that transforms, not merely information that decorates the tongue.
     </p>
 
-    <h2 class="text-2xl font-bold text-[#094570] mt-10 mb-4">Practical Steps for the Student of Knowledge</h2>
-    <ul class="list-disc pl-6 space-y-2 mb-8">
+    <h2 class="text-xl sm:text-2xl font-bold text-[#094570] mt-10 mb-4">
+      Practical Steps for the Student of Knowledge
+    </h2>
+
+    <ul class="list-disc pl-6 space-y-2 mb-8 text-gray-700">
       <li>Begin every lesson with a renewed intention.</li>
       <li>Write daily reflections after classes to internalize lessons.</li>
       <li>Spend time with scholars and ask questions with humility.</li>
-      <li>Revise what you’ve learned regularly — repetition strengthens memory.</li>
+      <li>Revise what you’ve learned regularly, repetition strengthens memory.</li>
       <li>Share what you know. Teaching others revives your own understanding.</li>
     </ul>
 
@@ -75,24 +133,29 @@
     </p>
 
     <div class="mt-10 border-t border-gray-200 pt-6 text-sm text-gray-500">
-      <p>Tagged under: <span class="text-[#094570] font-medium">Knowledge</span>, <span class="text-[#094570] font-medium">Tazkiyah</span>, <span class="text-[#094570] font-medium">Islamic Studies</span></p>
+      <p>
+        Tagged under:
+        <span class="text-[#094570] font-medium">Knowledge</span>,
+        <span class="text-[#094570] font-medium">Tazkiyah</span>,
+        <span class="text-[#094570] font-medium">Islamic Studies</span>
+      </p>
     </div>
   </main>
 
   <!-- RELATED POSTS -->
-  <section class="bg-[#85CCFF]/10 py-16" data-aos="fade-up">
-    <div class="max-w-6xl mx-auto px-6 text-center">
-      <h2 class="text-3xl font-bold text-[#094570] mb-8">Related Posts</h2>
-      <div class="grid md:grid-cols-3 sm:grid-cols-2 grid-cols-1 gap-8">
-        <a href="blog-post2.html" class="block bg-white rounded-xl shadow-md hover:shadow-xl transition p-6 text-left">
+  <section class="bg-[#85CCFF]/10 py-12 sm:py-16" data-aos="fade-up">
+    <div class="mx-auto max-w-6xl px-4 sm:px-6 text-center">
+      <h2 class="text-2xl sm:text-3xl font-bold text-[#094570] mb-8">Related Posts</h2>
+      <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6 sm:gap-8">
+        <a href="blog-post2.html" class="block bg-white rounded-2xl shadow-md hover:shadow-xl transition p-6 text-left">
           <h3 class="font-semibold text-[#094570] mb-2">Balancing Deen and Dunya</h3>
           <p class="text-gray-600 text-sm">How to maintain focus between worldly and spiritual obligations.</p>
         </a>
-        <a href="blog-post3.html" class="block bg-white rounded-xl shadow-md hover:shadow-xl transition p-6 text-left">
-          <h3 class="font-semibold text-[#094570] mb-2">Learning Arabic — A Gateway to Qur’an</h3>
+        <a href="blog-post3.html" class="block bg-white rounded-2xl shadow-md hover:shadow-xl transition p-6 text-left">
+          <h3 class="font-semibold text-[#094570] mb-2">Learning Arabic, A Gateway to Qur’an</h3>
           <p class="text-gray-600 text-sm">Arabic as a means to deepen your connection with the Qur’an.</p>
         </a>
-        <a href="blog-post4.html" class="block bg-white rounded-xl shadow-md hover:shadow-xl transition p-6 text-left">
+        <a href="blog-post4.html" class="block bg-white rounded-2xl shadow-md hover:shadow-xl transition p-6 text-left">
           <h3 class="font-semibold text-[#094570] mb-2">Consistency in Worship</h3>
           <p class="text-gray-600 text-sm">How small consistent deeds build long-lasting faith and focus.</p>
         </a>
@@ -102,7 +165,7 @@
 
   <!-- FOOTER -->
   <footer class="bg-[#094570] text-white py-10">
-    <div class="max-w-6xl mx-auto px-6 text-center">
+    <div class="mx-auto max-w-6xl px-4 sm:px-6 text-center">
       <p>&copy; 2025 Himaayah Institute of Arabic & Islamic Studies. All rights reserved.</p>
       <p class="mt-2 text-sm">Contact: himaayahmadrasah@gmail.com | +234 708 015 2258</p>
     </div>
@@ -110,6 +173,20 @@
 
   <!-- JS -->
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-  <script>AOS.init({ duration: 1000, once: true });</script>
+  <script>
+    AOS.init({ duration: 900, once: true });
+
+    // Mobile menu toggle
+    const menuBtn = document.getElementById('menuBtn');
+    const mobileMenu = document.getElementById('mobileMenu');
+
+    menuBtn?.addEventListener('click', () => {
+      const isOpen = !mobileMenu.classList.contains('hidden');
+      mobileMenu.classList.toggle('hidden');
+      menuBtn.setAttribute('aria-expanded', String(!isOpen));
+      menuBtn.textContent = isOpen ? 'Menu' : 'Close';
+    });
+  </script>
+
 </body>
 </html>
